fixes bug 193917 "incorporate changes from bz's comments in bug 176919" r+sr=bzbarsky